--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,5 @@
 {
-  "extends": ["next/core-web-vitals", "prettier"]
+  "extends": ["next", "next/core-web-vitals", "prettier"],
+  "plugins": [],
+  "rules": {}
 }
