--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.5",
     "lint-staged": "^15.2.9",
+    "prettier": "^3.3.3",
     "typescript": "^5"
   }
 }
