--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.0.14",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "next": "14.2.5",
     "react": "^18",
