--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
