--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@reduxjs/toolkit": "^2.2.7",
+    "firebase": "^10.13.0",
     "graphql": "^16.9.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
     "react-redux": "^9.1.2",
     "uuid": "^10.0.0"
   },
