feat: instaled react-hook-form,yup,@hookform/resolvers;feat:addyup schema for Login and SignUp,register SignUp form

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -110,6 +110,14 @@
       {
         "endOfLine": "auto"
       }
+    ],
+    "@typescript-eslint/no-misused-promises": [
+      "error",
+      {
+        "checksVoidReturn": {
+          "attributes": false
+        }
+      }
     ]
   },
   "root": true
