build: add rule for naming convention for vars and parameters

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -94,6 +94,18 @@
     ],
     "@typescript-eslint/no-extra-semi": "off",
     "@typescript-eslint/no-shadow": "warn",
+    "@typescript-eslint/naming-convention": [
+      "error",
+      {
+        "selector": ["variable", "parameter"],
+        "format": [
+          "camelCase",
+          "PascalCase",
+          "UPPER_CASE"
+        ],
+        "leadingUnderscore": "allow"
+      }
+    ],
     "@typescript-eslint/no-unused-vars": [
       "warn",
       {
