feat: add url parsing

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -98,11 +98,7 @@
       "error",
       {
         "selector": ["variable", "parameter"],
-        "format": [
-          "camelCase",
-          "PascalCase",
-          "UPPER_CASE"
-        ],
+        "format": ["camelCase", "PascalCase", "UPPER_CASE"],
         "leadingUnderscore": "allow"
       }
     ],
