--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@reduxjs/toolkit": "^2.2.7",
+    "cookies-next": "^4.2.1",
     "firebase": "^10.13.0",
     "graphql": "^16.9.0",
     "next": "14.2.5",
