--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
       "@components/*": ["./src/components/*"],
       "@views/*": ["./src/views/*"],
       "@utils/*": ["./src/utils/*"],
+      "@types/*": ["./src/types/*"],
       "@styles/*": ["./src/styles/*"]
     },
     "noImplicitAny": true
