feat:add IsAuth HOC,implemented:auth with google and emaail with password,refactor:refactor SignUpForm

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -103,7 +103,7 @@
       }
     ],
     "@typescript-eslint/no-unused-expressions": [
-      "error",
+      "off",
       { "allowTernary": true }
     ],
     "prettier/prettier": [
