--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.5",
+    "redux-persist": "^6.0.0",
     "uuid": "^10.0.0",
     "yup": "^1.4.0"
   },
