--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
   },
   "plugins": ["react", "@typescript-eslint", "prettier"],
   "rules": {
+    "react/display-name": "off",
     "import/extensions": "off",
     "import/prefer-default-export": "off",
     "no-debugger": "warn",
@@ -102,13 +103,21 @@
       }
     ],
     "@typescript-eslint/no-unused-expressions": [
-      "error",
+      "off",
       { "allowTernary": true }
     ],
     "prettier/prettier": [
       "error",
       {
         "endOfLine": "auto"
+      }
+    ],
+    "@typescript-eslint/no-misused-promises": [
+      "error",
+      {
+        "checksVoidReturn": {
+          "attributes": false
+        }
       }
     ]
   },
