--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
   },
   "plugins": ["react", "@typescript-eslint", "prettier"],
   "rules": {
+    "@typescript-eslint/naming-convention": "error",
     "react/display-name": "off",
     "import/extensions": "off",
     "import/prefer-default-export": "off",
