Sign in sign up (#6)
* feat: add base firebase config for signIn and signUp

* Sign up (#4)

* feat: add SignUp template

* feat: instaled react-hook-form,yup,@hookform/resolvers;feat:addyup schema for Login and SignUp,register SignUp form

* feat:add FormInput;refactor:fix error with MUI mediaQuery

* feat:implement SignUp with email and password and login with google,reafactor:refactor firebase

* feat:add signUp user and loginWithGoogle Api

* :refactor:add types to firebase auth function,create setTokens

* feat:add IsAuth HOC,implemented:auth with google and emaail with password,refactor:refactor SignUpForm

* feat:refactor remove unused variables

* feat:add ToastProvider

* refactor:rename HOC folder into hocs,data folder into date

* reafactor:change form grid componnt to box;create FormContainer

* refactor:refactor isAuth hoc

* Sign in (#5)

* feat:add SignIn Form

* refactor:memorized form input;feat:add withLogger hoc

* refactor:move ToastProvider and StoreProvider to providers folder

* refactor:change hocs prop types

* feat:implement sigIn with email and password

* feat:implement signIn with token and signOut,add:signInWithToken hoc

* refactor:remove commented code in SignIn component

* refactor: useSignInForm and useSignUpForm

* refactor:remove useLogOut,refactor:useSaveAuthData to useAuthData

* feat:add password visibility

* refactor: create constants for router,errors and coockies

* refactor:remove StoreProvider from providers to app

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,8 @@
   },
   "plugins": ["react", "@typescript-eslint", "prettier"],
   "rules": {
+    "@typescript-eslint/naming-convention": "error",
+    "react/display-name": "off",
     "import/extensions": "off",
     "import/prefer-default-export": "off",
     "no-debugger": "warn",
@@ -102,13 +104,21 @@
       }
     ],
     "@typescript-eslint/no-unused-expressions": [
-      "error",
+      "off",
       { "allowTernary": true }
     ],
     "prettier/prettier": [
       "error",
       {
         "endOfLine": "auto"
+      }
+    ],
+    "@typescript-eslint/no-misused-promises": [
+      "error",
+      {
+        "checksVoidReturn": {
+          "attributes": false
+        }
       }
     ]
   },
