--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
     "uuid": "^10.0.0"
   },
