feat: add url updating on submit

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -109,6 +109,14 @@
         "varsIgnorePattern": "^_"
       }
     ],
+    "@typescript-eslint/no-misused-promises": [
+      "error",
+      {
+        "checksVoidReturn": {
+          "attributes": false
+        }
+      }
+    ],
     "@typescript-eslint/no-unused-expressions": [
       "error",
       { "allowTernary": true }
