--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@reduxjs/toolkit": "^2.2.7",
+    "base64url": "^3.0.1",
     "firebase": "^10.13.0",
     "graphql": "^16.9.0",
     "next": "14.2.5",
