--- a/package.json
+++ b/package.json
@@ -17,15 +17,17 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.14",
-    "@graphiql/react": "^0.26.2",
-    "@graphiql/toolkit": "^0.11.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/codemirror": "^5.60.15",
+    "@uiw/react-json-view": "^2.0.0-alpha.26",
+    "codemirror": "^5.65.3",
+    "codemirror-graphql": "^2.1.1",
     "firebase": "^10.13.0",
     "graphql": "^16.9.0",
-    "graphql-ws": "^5.16.0",
     "next": "14.2.5",
+    "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
@@ -51,7 +53,6 @@
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.5",
     "lint-staged": "^15.2.9",
-    "prettier": "^3.3.3",
     "typescript": "^5",
     "vitest": "^2.0.5"
   },
