--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/lodash": "^4.17.7",
     "cookies-next": "^4.2.1",
     "firebase": "^10.13.0",
     "graphql": "^16.9.0",
+    "lodash.debounce": "^4.0.8",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
@@ -37,6 +39,7 @@
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.0",
+    "@types/lodash.debounce": "^4.0.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
