--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.14",
+    "@graphiql/react": "^0.26.2",
+    "@graphiql/toolkit": "^0.11.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@reduxjs/toolkit": "^2.2.7",
@@ -26,6 +28,7 @@
     "codemirror-graphql": "^2.1.1",
     "firebase": "^10.13.0",
     "graphql": "^16.9.0",
+    "graphql-ws": "^5.16.0",
     "next": "14.2.5",
     "prettier": "^3.3.3",
     "react": "^18",
