--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@codemirror/lang-json": "^6.0.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.14",
@@ -23,9 +24,11 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@reduxjs/toolkit": "^2.2.7",
-    "base64url": "^3.0.1",
     "@types/codemirror": "^5.60.15",
+    "@uiw/codemirror-theme-solarized": "^4.23.2",
+    "@uiw/react-codemirror": "^4.23.2",
     "@uiw/react-json-view": "^2.0.0-alpha.26",
+    "base64url": "^3.0.1",
     "codemirror": "^5.65.3",
     "codemirror-graphql": "^2.1.1",
     "cookies-next": "^4.2.1",
@@ -36,8 +39,8 @@
     "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.53.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
