feat: add sending request with body

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -136,7 +136,8 @@
           "attributes": false
         }
       }
-    ]
+    ],
+    "no-void": ["error", { "allowAsStatement": true }]
   },
   "root": true
 }
