--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -120,7 +120,10 @@
           "attributes": false
         }
       }
-    ]
+    ],
+    "@typescript-eslint/no-unsafe-call": "off",
+    "@typescript-eslint/unbound-method": "off",
+    "no-global-assign": "off"
   },
   "root": true
 }
