--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@reduxjs/toolkit": "^2.2.7",
-    "base64url": "^3.0.1",
+    "@testing-library/react": "^16.0.1",
     "@types/codemirror": "^5.60.15",
     "@uiw/react-json-view": "^2.0.0-alpha.26",
+    "@vitejs/plugin-react": "^4.3.1",
+    "base64url": "^3.0.1",
     "codemirror": "^5.65.3",
     "codemirror-graphql": "^2.1.1",
     "cookies-next": "^4.2.1",
@@ -36,19 +38,21 @@
     "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.53.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "uuid": "^10.0.0",
+    "vitest": "^2.0.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
-    "@testing-library/react": "^16.0.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/node": "^20.16.5",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
@@ -64,9 +68,9 @@
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.5",
+    "jsdom": "^25.0.0",
     "lint-staged": "^15.2.9",
-    "typescript": "^5",
-    "vitest": "^2.0.5"
+    "typescript": "^5"
   },
   "config": {
     "commitizen": {
