--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -97,27 +97,11 @@
     ],
     "@typescript-eslint/no-extra-semi": "off",
     "@typescript-eslint/no-shadow": "warn",
-    "@typescript-eslint/naming-convention": [
-      "error",
-      {
-        "selector": ["variable", "parameter"],
-        "format": ["camelCase", "PascalCase", "UPPER_CASE"],
-        "leadingUnderscore": "allow"
-      }
-    ],
     "@typescript-eslint/no-unused-vars": [
       "warn",
       {
         "argsIgnorePattern": "^_",
         "varsIgnorePattern": "^_"
-      }
-    ],
-    "@typescript-eslint/no-misused-promises": [
-      "error",
-      {
-        "checksVoidReturn": {
-          "attributes": false
-        }
       }
     ],
     "@typescript-eslint/no-unused-expressions": [
@@ -138,8 +122,8 @@
         }
       }
     ],
-    "no-void": ["error", { "allowAsStatement": true }]
+    "no-void": ["error", { "allowAsStatement": true }],
+    "@typescript-eslint/unbound-method": "off"
   },
   "root": true
 }
-
