--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "graphql-ws": "^5.16.0",
     "lodash.debounce": "^4.0.8",
     "next": "14.2.5",
+    "next-intl": "^3.19.3",
     "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
@@ -48,7 +49,7 @@
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
-    "uuid": "^10.0.0",  
+    "uuid": "^10.0.0",
     "vitest": "^2.0.5",
     "yup": "^1.4.0"
   },
